# nixwrap

./: DEV_GUIDE.md  README.md  USER.md  devenv.nix  flake.nix  pyproject.toml  wrapper.toml
examples/: github-nodejs-wrapper.toml  github-release-wrapper.toml
scripts/: check_update.py  update_version.py
src/nix_devenv_wrapper/: __init__.py  config.py  hashing.py  models.py  updater.py
src/nix_devenv_wrapper/cli/: __init__.py  main.py
src/nix_devenv_wrapper/generators/: __init__.py  devenv.py  flake_nix.py  package_nix.py
src/nix_devenv_wrapper/registries/: __init__.py  base.py  factory.py  github.py  npm.py  pypi.py
template/: devenv.nix
