[project]
name = "nix-devenv-wrapper"
version = "0.1.0"
description = "Wrap packages from registries as NixOS flakes with devenv.sh integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nixwrap Contributors" }
]
dependencies = [
  "httpx>=0.25",
  "pydantic>=2.0"
]

[project.scripts]
ndw = "nix_devenv_wrapper.cli.main:main"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

