[project]
name = "nixwrap"
version = "0.2.0"
description = "Wrap packages from registries as NixOS flakes with env tooling integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nixwrap Contributors" }
]
dependencies = [
  "pydantic>=2.0"
]

[project.scripts]
nixwrap = "nixwrap.cli.main:main"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
